Closed caption lines overlap https://bugs.webkit.org/show_bug.cgi?id=115438 <rdar://problem/13351747>
Reviewed by Eric Carlson.

Take the line-box padding into account when determining line hight by setting
the -webkit-line-box-contain property to include 'inline-box'.

* css/mediaControls.css:
(video::-webkit-media-text-track-container):

Canonical link: https://commits.webkit.org/133918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149438 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/css/mediaControls.css
+++ b/Source/WebCore/css/mediaControls.css
@@ -237,6 +237,8 @@ video::-webkit-media-text-track-container {
     word-break: break-word;
 
     -webkit-flex: 1 1;
+
+    -webkit-line-box-contain: block inline-box replaced;
 }
 
 video::cue {
